# main_service

./: Android.mk  CleanSpec.mk  README.md  build.gradle  gradle.properties  xiaobao.bat  xiaoshuai.bat  xiaoyong.bat  xiaoyong_6mic_50d.bat  youxue.bat
APK/: Android.mk
SRC/RuiqianqiApp/tools/: Android.mk  CMakeLists.txt  build.gradle
SRC/RuiqianqiApp/tools/src/androidTest/java/com/zccl/ruiqianqi/tools/: ApplicationTest.java
SRC/RuiqianqiApp/tools/src/main/: AndroidManifest.xml  build_native.bat
SRC/RuiqianqiApp/tools/src/main/assets/: test.html
SRC/RuiqianqiApp/tools/src/main/java/android/app/: ActivityManagerNative.java  IActivityManager.java
SRC/RuiqianqiApp/tools/src/main/java/com/zccl/ruiqianqi/tools/: CheckUtils.java  Download.java  FileUtils.java  FontUtils.java  InputUtils.java  JsonUtils.java  LogUtils.java  MIMEUtils.java  MYUIUtils.java  MyAppUtils.java  MySummary.java  PhoneUtils.java  ReflectUtils.java  RegexUtils.java  ResUtils.java  ShareUtils.java  ShellUtils.java  StringUtils.java  SystemUtils.java  VoiceUtils.java  WifiUtils.java
SRC/RuiqianqiApp/tools/src/main/jni/: Android.mk  Application.mk  study.txt
SRC/RuiqianqiApp/tools/src/main/jni/header/: public.h
SRC/RuiqianqiApp/tools/src/main/jni/header/function/: InputEvent.h  dpp_config.h  function.h  media.h
SRC/RuiqianqiApp/tools/src/main/jni/header/test/: test.h
SRC/RuiqianqiApp/tools/src/main/jni/header/tools/: MyConfig.h  MyMutex.h  MyNoncopy.h  MySingleton.h
SRC/RuiqianqiApp/tools/src/main/jni/prebuilt/ffmpeg/: Android.mk
SRC/RuiqianqiApp/tools/src/main/jni/prebuilt/ffmpeg/include/libavcodec/: avcodec.h
SRC/RuiqianqiApp/tools/src/main/jni/prebuilt/ffmpeg/include/libavutil/: avconfig.h  mathematics.h  murmur3.h
SRC/RuiqianqiApp/tools/src/main/jni/prebuilt/ffmpeg/include/libswresample/: swresample.h
SRC/RuiqianqiApp/tools/src/main/jni/source/entry1/: Android.mk  main.cpp
SRC/RuiqianqiApp/tools/src/main/jni/source/entry2/: Android.mk  javah.bat
SRC/RuiqianqiApp/tools/src/main/jni/source/entry2/header/: com_zccl_ruiqianqi_tools_jni_NdkTools.h
SRC/RuiqianqiApp/tools/src/main/jni/source/entry2/source/: main.cpp
SRC/RuiqianqiApp/tools/src/main/jni/source/function/: Android.mk  InputEvent.cpp  function.cpp  media.cpp  myrecords.txt
SRC/RuiqianqiApp/tools/src/main/jni/source/test/: Android.mk  test.cpp
SRC/RuiqianqiApp/tools/src/main/jni/source/tools/: Android.mk  MyConfig.cpp
SRC/RuiqianqiApp/tools/src/main/res/layout/: toast_show_text.xml
SRC/RuiqianqiApp/tools/src/main/res/values/: strings.xml
SRC/RuiqianqiApp/tools/src/test/java/com/zccl/ruiqianqi/tools/: ExampleUnitTest.java
YYD_1Mic/: Android.mk  five.mk  (+3 more)
(+1420 files in other folders)
